--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ body {
     z-index: 100;
     position: absolute;
     top: 65%;
-    left: 49%;
+    left: 50%;
 }
 
 .button button {
     border: none;
     background-color:black; 
     color: white;
+    cursor: pointer;
+
 }
 
 .apple-spline {
@@ -47,4 +49,11 @@ body {
     top: 0;
     left: 0;
     z-index: 100;
+ }
+
+ @media (max-width: 700px){
+
+    .apple-spline {
+        display: none;
+    }
  }
