--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     background-color: black;
 }
 
+.loading h1 {
+    font-size: 64px;
+    color: whitesmoke;
+}
+
 .button {
     z-index: 100;
     position: absolute;
@@ -23,12 +28,13 @@ body {
     z-index: -10;
 }
 
-.video__container {
+.video__container, .loading {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .react-player {
